CreateUserWithUserRole Endpoint, and deployed DB to Azure.
