# IAMApp/IAM/Controllers/UserManagementController.cs
@@ -31,23 +31,37 @@ namespace IAM.Controllers
 
 
         //If username/password is valid, the user is added to the AspNetUsers table.
-        [HttpPost("RegisterUser")]
+        [HttpPost("CreateUserWithUserRole")]
         [AllowAnonymous]
-        public async Task<ActionResult> RegisterUser([FromBody] RegisterUser registerUser)
+        public async Task<ActionResult> CreateUserWithUserRole([FromBody] RegisterUser registerUser)
         {
             Debug.WriteLine("RegisterUser endpoint hit.");
             if (ModelState.IsValid)
             {
-                var user = new ApplicationUser { UserName = registerUser.Email, Email = registerUser.Email, EmailConfirmed = true };
-                var result = await userManager.CreateAsync(user, registerUser.Password);
-                if (result.Succeeded)
+                var UserAlreadyExists = await userManager.FindByEmailAsync(registerUser.Email);
+                if (UserAlreadyExists == null)
                 {
-                    Debug.WriteLine("User sussessfuly created");
-                    return Ok("User sussessfuly created");
+                    var user = new ApplicationUser { UserName = registerUser.Email, Email = registerUser.Email, EmailConfirmed = true };
+                    var resultCreateUser = await userManager.CreateAsync(user, registerUser.Password);
+                    //Här skall jag ge user, user role
+                    //modelBuilder.Entity<ApplicationRole>().HasData(new ApplicationRole { Id = "1", Name = "User"  });
+                    //var role = new ApplicationRole { Id = "1", Name = "User" };
+                    //List<string> roles = new List<string> { "User" }; //This role = User. All new users are created with "User" role.
+                    var resultAddRole = await userManager.AddToRoleAsync(user, "User");
+
+                    if (resultCreateUser.Succeeded && resultAddRole.Succeeded)
+                    {
+                        Debug.WriteLine("User sussessfuly created");
+                        return Ok("User sussessfuly created");
+                    }
+                    else
+                    {
+                        return BadRequest("Failed to create user");
+                    }
                 }
                 else
                 {
-                    return BadRequest("Failed to create user. result.Succeeded = false");
+                    return BadRequest("User already exists");
                 }
             }
             else
